# ofiuco

./: .bazelrc  MODULE.bazel  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: BUILD.bazel  integration_test.sh
examples/airflow/: MODULE.bazel
examples/aspect_rules_py/: MODULE.bazel
examples/cc_toolchain/: MODULE.bazel
examples/markers/: MODULE.bazel
examples/numpy/: .bazelrc  BUILD.bazel  MODULE.bazel
examples/pyspark-cross-compile/: .bazelrc  BUILD.bazel  MODULE.bazel  pyproject.toml
examples/torch/: MODULE.bazel
examples/transitions/: MODULE.bazel
examples/uv/: MODULE.bazel
examples/wheel/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  app.py  compression.py  network.py  pyproject.toml  test.py
python/: extensions.bzl  repositories.bzl  requirements.bzl
python/private/: lock_parser.bzl  lock_parser.py  package_deps.bzl
